--- a/readme.Rmd
+++ b/readme.Rmd
@@ -2,7 +2,7 @@
 
 This is [VU](http://www.vu.nl/en/ "http://www.vu.nl/en/") Amsterdam Summer School course "Big Data in Society" final project. It is about analyzing how NY Times articles, Twitter and Facebook feed topics differrelated to shootings/killings in Dallas, Louisiana and Minnesota in July 2016. Visualisations are [here](http://rristo.github.io/start.html "http://rristo.github.io/start.html").
 
-Authors: Pablo De Juan Bernabéu and Risto Hinno
+Authors: Pablo Bernabéu and Risto Hinno
 
 Legend:
 - [Analysis.R](https://github.com/RRisto/Summer-school-course-project/blob/master/Analysis.R "https://github.com/RRisto/Summer-school-course-project/blob/master/Analysis.R") - contains code for main analysis and data cleaning. Didn't set seed, so getting exactly same results is complicated (but results should not be very different!)
